examples/test/testpolicy17801.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17801
  namespace: namespace218
spec:
  podSelector:
    matchLabels:
      key15: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value30
          key33: value17
          key29: value40
      podSelector:
        matchLabels:
          key41: value28
